Fix memory limits